# json2ciw

./: .all-contributorsrc  .gitignore  01_call_centre_example.ipynb  02_jackson_network_example.ipynb  03_urgent_care_treatment_centre_example.ipynb  04_call_centre_renege.ipynb  CHANGELOG.md  CHANGELOG.md.backup  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  call_centre_example.ipynb  example_app.py  great-docs.yml  pyproject.toml
.github/workflows/: alt-text.yml  docs.yml  lint.yml  test.yml
binder/: environment.yml
json2ciw/: __init__.py  datasets.py  engine.py  interface.py  results.py  schema.py  ui.py
json2ciw/models/: call_centre.json  call_renege.json  jackson_network.json  mm1_renege.json  six_node_ucc.json  three_node_network.json
tests/: test_api.py  test_datasets.py  test_smoke.py
user_guide/: 00_welcome.qmd  01_call_centre_example.qmd  01_installation.qmd  02_jackson_network_example.qmd  02_json_schema.qmd  03_call_centre_example.qmd  03_urgent_care_treatment_centre_example.qmd  04_call_centre_renege.qmd  04_jackson_network_example.qmd  05_urgent_care_treatment_centre_example.qmd  06_call_centre_renege.qmd
