[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json2ciw"
dynamic = ["version"]
description = "A python package to convert JSON files into working Ciw DES models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Thomas Monks", email = "t.m.w.monks@exeter.ac.uk" },
    { name = "Amy Heather", email = "a.heather2@exeter.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",

]
dependencies = [
    "ciw>=3.2.7",
    "joblib>=1.5.3",
    "numpy>=1.26.1", 
    "pandas>=2.0.1",
    "plotly>=6",
    "pydantic>=2.12.5",
    "streamlit>=1.55.0, <2.0.0"
]

[dependency-groups]
dev = [
    "great-docs",
    "hatch",
    "lintquarto",
    "matplotlib",
    "pytest",
    "rich",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/pythonhealthdatascience/json2ciw"
"Bug Tracker" = "https://github.com/pythonhealthdatascience/json2ciw/issues"

[tool.hatch.version]
path = "json2ciw/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/json2ciw",
]

[tool.ruff]
line-length=79  # PEP-8
format.quote-style="double"
lint.select = ["ALL"]
lint.ignore = [
    "D203",
    "D213",
    "COM812",
    "BLE001",  # Do not catch blind exception
    "C901",  # Too complex
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "ANN401",  # Dynamically typed expressions disallowed
]
lint.per-file-ignores."tests/*" = [
    "INP001",
    "S101",
    "ANN",
    "PLR2004",
    "SLF001",
]
lint.per-file-ignores."user_guide/*" = [
    "D100",  # Missing docstring in public module
    "T201",  # Print found
    "A004",  # Import shadowing a Python builtin
]

[tool.lintquarto]
linters = [
    "ruff",
]
paths = [
    "user_guide"
]
